--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,8 @@
         <!---->
     <!--</Button>    -->
     <TextView
+        android:id="@+id/btn_Register"
+        android:onClick="onClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
